--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!--mod-1-->
 <div class="col-3-3 center" style="background: #75a7ad">
-  <img class="non-radius" src="./kv-packshot.jpg" alt="" />
+  <img
+    class="non-radius"
+    src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/sodastream/SodaStream_Butelka_MyOnlyBottle_Blue/kv-packshot.jpg"
+    alt=""
+  />
 </div>
 <!--mod-1 koniec-->
 
@@ -15,7 +19,11 @@
 <!--mod-3-->
 <div class="col-3-3" style="background: #13294b">
   <div class="col-2-4 center">
-    <img class="non-radius" src="./img-eff.jpg" alt="" />
+    <img
+      class="non-radius"
+      src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/sodastream/SodaStream_Butelka_MyOnlyBottle_Blue/img-eff.jpg"
+      alt=""
+    />
   </div>
   <div class="col-2-4 center">
     <h3 class="size-5" style="color: #ffffff">
@@ -69,7 +77,11 @@
 
 <!--mod-5-->
 <div class="col-3-3 col-no-pad center">
-  <img class="non-radius" src="./img-eff-2.jpg" alt="" />
+  <img
+    class="non-radius"
+    src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/sodastream/SodaStream_Butelka_MyOnlyBottle_Blue/img-eff-2.jpg"
+    alt=""
+  />
 </div>
 <!--mod-5 koniec-->
 
@@ -112,7 +124,11 @@
     </p>
   </div>
   <div class="col-2-4 center">
-    <img class="non-radius" src="./eko.jpg" alt="" />
+    <img
+      class="non-radius"
+      src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/sodastream/SodaStream_Butelka_MyOnlyBottle_Blue/eko.jpg"
+      alt=""
+    />
   </div>
 </div>
 <!--mod-7 koniec-->
@@ -134,7 +150,11 @@
     </p>
   </div>
   <div class="col-1-3 top center" style="background: #75a7ad">
-    <img src="./mini-packshot.jpg" class="left" alt="" />
+    <img
+      src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/sodastream/SodaStream_Butelka_MyOnlyBottle_Blue/mini-packshot.jpg"
+      class="left"
+      alt=""
+    />
   </div>
   <div class="col-1-3 top center">
     <h3 class="size-5 left" style="color: #ffffff">Twoje bezpieczeństwo</h3>
@@ -153,20 +173,33 @@
 
 <!--mod-9-->
 <div class="col-3-3 col-no-pad center">
-  <img class="non-radius" src="./set-img.jpg" alt="" />
+  <img
+    class="non-radius"
+    src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/sodastream/SodaStream_Butelka_MyOnlyBottle_Blue/set-img.jpg"
+    alt=""
+  />
 </div>
 <!--mod-9 koniec-->
 
 <!--mod-10-->
 <div class="col-3-3" style="background: #efece7">
   <div class="col-1-3 top">
-    <img src="./step-1.png" alt="" />
+    <img
+      src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/sodastream/SodaStream_Butelka_MyOnlyBottle_Blue/step-1.png"
+      alt=""
+    />
   </div>
   <div class="col-1-3 top">
-    <img src="./step-2.png" alt="" />
+    <img
+      src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/sodastream/SodaStream_Butelka_MyOnlyBottle_Blue/step-2.png"
+      alt=""
+    />
   </div>
   <div class="col-1-3 top">
-    <img src="./step-3.png" alt="" />
+    <img
+      src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/sodastream/SodaStream_Butelka_MyOnlyBottle_Blue/step-3.png"
+      alt=""
+    />
   </div>
 </div>
 <!--mod-10 koniec-->
@@ -191,7 +224,11 @@
 <!-- mod-11 koniec -->
 <!--mod-12-->
 <div class="col-3-3 col-no-pad center">
-  <img class="non-radius" src="./syrup.jpg" alt="" />
+  <img
+    class="non-radius"
+    src="https://media.komputronik.pl/pl-komputronik/img/opisy_produktow/content/sodastream/SodaStream_Butelka_MyOnlyBottle_Blue/syrup.jpg"
+    alt=""
+  />
 </div>
 <!--mod-12 koniec-->
 
